# marble_virtual_comms

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: MVCPeer.h  MarbleVirtualComms.h
launch/: create_peers.launch  marble_virtual_comms.launch  virtual_team.launch
scripts/: create_peer_pairs.py  create_peers.py  sync.sh
src/: MVCPeer.cpp  MarbleVirtualComms.cpp  marble_virtual_comms_node.cpp
